# GenAI

./: .gitignore
01 chai/: embading.py  tokinizer.py
02 Gemini/: chain_of_thought.py  chat2.py  chat3.py  tempCodeRunnerFile.py
02 Gemini/Persona/: package.json
02 Gemini/Persona/src/: App.css
02 Gemini/Persona/src/components/: PiyushSirPersona.js  hitesh_sir_chat.jsx  navbar.jsx  piyush_sir_chat.jsx
02 chai/: Self_Consistency_gemini.py  chain_of_thought.py  chain_of_thoughts_gemini.py  chat02_gemini.py  chat2.py  chat3.py  chat_genai.py  chat_genimi_hack.py  self-consistency_prompting.py
02 chai/Persona/: package-lock.json
02 chai/Persona/src/: App.jsx
02 chai/Persona/src/components/: HiteshSirPersona.js  main.jsx
03/AI Agent/AI agent with tools/: .gitignore
03/AI Agent/mini cursor/: cursore.py  main.html
03/Fine Tuning/: docker-compose.yml  ollama_api.py
AI Agent/: Dockerfile  Readme.md  agent.py  requirements.txt
AI Agent/AI agent with tools/: Readme.md  agent.py
AI Agent/mini cursor/: README.md  cursore.py
AI Agent/mini cursor/calculator/: calculator.py
AI Agent/mini cursor/game/: snake_game.py  tic_tac_toe.py
AI Agent/mini cursor/portfolio/: index.html  script.js
Rag/PDF_Rag/: talkToPdf_rag.py  talkToYoutube_rag.py
Rag/Query Transformation/: Hypothetical_document_embedding.py  Parallel_query_retrieval.py  Query_decomposition_less_abstract.py  Reciprocate_rank_fussion.py  docker-compose.qdrantdb.yml  requirements.txt
Rag/Routings/: chaicode_docs_rag.py  logical_routing.py  pyproject.toml  test.py
tokenizer/: index.html  main.js
(+11 files in other folders)
