[project]
name = "routings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google>=3.0.0",
    "google-genai>=1.20.0",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "pypdf>=5.6.0",
]
